# mlsummary

./: LICENSE  README.md  pyproject.toml
scripts/: demo.py  demo_ss.py  example_titanic.py
src/mlsummary/: __init__.py  association.py  vif.py
