[project]
name = "mlsummary"
version = "0.1.0"
description = "This is package to provide some usefull tools for the model building step in a Machine Learning project."
readme = "README.md"
authors = [
    { name = "Jorge Rivero Dones", email = "jrdminas@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3", 
    "Operating System :: OS Independent",
]

keywords = ["vif"]

[project.urls]
Homepage = "https://github.com/jrdminas/mlsummary"
Issues = "https://github.com/jrdminas/mlsummary"

[project.scripts]
mlsummary = "mlsummary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["polars", "scikit-learn"]
